--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: PASZTOR Gyorgy
+  description: Managing creation of jails on freebsd hosts
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +13,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: BSD-3-Clause
 
   min_ansible_version: 2.1
 
@@ -38,8 +37,17 @@ galaxy_info:
   #   - 1.0
   #   - 7
   #   - 99.99
+  platforms:
+    - name: FreeBSD
+      versions:
+        - 13.0-RELEASE
 
-  galaxy_tags: []
+  galaxy_tags:
+    - FreeBSD
+    - jail
+    - jib
+    - VNET
+    - VIMAGE
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
