--- a/meta/main.yml
+++ b/meta/main.yml
@@ -40,14 +40,14 @@ galaxy_info:
   platforms:
     - name: FreeBSD
       versions:
-        - 13.0-RELEASE
+        - 13.0
 
   galaxy_tags:
-    - FreeBSD
+    - freebsd
     - jail
     - jib
-    - VNET
-    - VIMAGE
+    - vnet
+    - vimage
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
