--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@
 name: GitHub Action
 
 on:
-  - push
+  push:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -14,6 +15,7 @@ jobs:
         uses: robertdebock/galaxy-action@1.2.0
         with:
           galaxy_api_key: ${{ secrets.galaxy_api_key }}
+          git_branch: main
 ## This is a basic workflow to help you get started with Actions
 #
 #name: CI
