New fixes and improvements
- for the jail zfs dataset, you can set a quota
- directory creation for mounts are moved after in the jail tasks when
  the install is finished
- jailcfg.vnet is not mandatory anymore
- readability improvements following ansible-lint advices
- install was stopped in fact if BSDINSTALL_DISTSITE was not defined.
  Now it has a default setting pointing to ftp.freebsd.hu, but can be
  overriden in the jail.mirror setting. Be advised: it only requires
  the prefix of the mirror. The /pub/FreeBSD/releases and the rest
  can be derived from the target systems' architecture and version.
- jail network configuration item is fixed: it used ansible's jail
  attribute, which was only able to set the rc sysvars, when the jail
  was running. Now that is circumvented by defining the full path of
  the jails' rc.conf file.
- if the jail.autostart is defined in the jail's hostvars, than a new
  task make sure it will be autostarted / it won't be autostarted based
  on the setting's value. If it's not defined, the task won't bother.
- At the end of the host-related tasks, the jail service itself is enabled.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -42,7 +42,8 @@ galaxy_info:
   platforms:
     - name: FreeBSD
       versions:
-        - 13.0
+        - 13.0 # noqa schema
+        - 13.1 # noqa schema
 
   galaxy_tags:
     - freebsd
