Devuan support added
By adding devuan support a few things changed, and added as well:
- From now on, instead of the jib script provided by the FreeBSD examples repository
  I use my own simplified version. In this case you only provide bridge names, not
  interface names. Since I use vm-bhyve a lot, it feels simpler if vm-bhyve manages
  the bridge interfaces. And in those rare cases it don't, I want even deeper control.
  It doesn't make any sense for the jib script to create bridges on the fly.
- I wrote a script called "linjailsetup" in order to copy a few native bsd binaries
  inside the jail. This way the jail can configure their side of the epair device.
  The idea of the /native directory comes from illumus based systems' lx brand zones.
- The basic expetation from every jail created by this role is to provide a viable
  ssh service, and I can log in via my ssh key. That way, the rest of the jail
  can be managed via ansible.
- In order for the ssh to work, I had to fix the logging subsystem in the jail.
  To make it work, I used syslog-ng. I don't intend to change it back or to any
  other syslog subsystem. Don't send a PR for that. It will be auto-rejected.

Please Note: I've only tested Devuan support with the ascii release. YMMV.

--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -45,11 +45,17 @@
     strip: 4
   when: scripted_jail.rc != 0
 
-- name: install jib script
+- name: install jib static script
   copy:
-    src: /usr/share/examples/jails/jib
+    src: jibs
     dest: /usr/local/sbin/
-    remote_src: yes # noqa yaml[truthy]
+    #remote_src: yes # noqa yaml[truthy]
+    mode: 0755
+
+- name: install linjailsetup script
+  copy:
+    src: linjailsetup
+    dest: /usr/local/sbin
     mode: 0755
 
 - name: iterate through jails on this host
