--- a/tasks/jail.yaml
+++ b/tasks/jail.yaml
@@ -9,6 +9,9 @@
   set_fact:
     jailcfg: "{{ hostvars[jailname].get('jail') }}"
 
+- name: load OS specific preparations
+  include_tasks: "pre-{{ jailcfg.os|default('FreeBSD') }}.yaml"
+
 - name: debug jailcfg
   debug:
     var: jailcfg
@@ -53,17 +56,18 @@
         mount += "{{ item }} {{ jail.root.mountpoint }}/{{ jailname }}{{ item }} nullfs defaults 0 0";
       {%  endif %}
       {% endfor %}
+      {{ jailcfg_os | default('') }}
       {% if jailcfg.vnet is defined %}
       {%   if jailcfg.vnet is iterable and jailcfg.vnet is not string %}
       {%     for vnetif in jailcfg.vnet %}
         vnet.interface {% if loop.first %}={% else %}+={% endif %} "e{{ loop.index0 }}b_{{ jailname }}";
       {%     endfor %}
-        exec.prestart += "jib addm -b _br {{ jailname }} \!{{ jailcfg.vnet | join(' \!') }}";
+        exec.prestart += "jibs addm {{ jailname }} {{ jailcfg.vnet | join(' ') }}";
       {%   else %}
         vnet.interface = "e0b_{{ jailname }}";
-        exec.prestart += "jib addm {{ jailname }} {{ jailcfg.vnet }}";
+        exec.prestart += "jibs addm {{ jailname }} {{ jailcfg.vnet }}";
       {%   endif %}
-        exec.poststop += "jib destroy {{ jailname }}";
+        exec.poststop += "jibs destroy {{ jailname }}";
       {% endif %}
       {% if jailcfg.custom is defined %}
       {%   for key, value in jailcfg.custom.items() %}
@@ -80,38 +84,8 @@
 
 # vnet.interface = "{{ hostvars[jailname].jail.inet }}b";
 
-- name: bsdinstall template script
-  copy:
-    dest: "{{ jail.root.mountpoint }}/.template/{{ jailname }}"
-    mode: 0644
-    content: |
-      DISTRIBUTIONS="base.txz"
-      export nonInteractive="YES"
-      #!/bin/sh
-      IGNORE_OSVERSION=yes pkg install -y {{ jail.python | default('python') }}
-      sysrc sshd_enable="YES"
-      {% for network in jailcfg.inet | jail_net_conf(jailname) %}
-      sysrc ifconfig_{{ network.ifname }}="{{ network.ifconf }}"
-      {% endfor %}
-      sysrc defaultrouter={{ jailcfg.defaultrouter }}
-      {% set juser = hostvars[jailname].get('ansible_user', jail.user) %}
-      {% set juid  = hostvars[jailname].get('ansible_user_uid','') %}
-      {% set jgecos = hostvars[jailname].get('ansible_user_gecos','') %}
-      echo "{{ juser }}:{{ juid }}:::::{{ jgecos }}:::" | adduser -w no -f -
-      pkg install -y sudo
-      echo "{{ juser }} ALL=(ALL) NOPASSWD: ALL" >/usr/local/etc/sudoers.d/{{ juser }}
-      install -d -m 700 /home/{{ juser }}/.ssh
-      echo "{{ jail.ssh_key }}" >/home/{{ juser }}/.ssh/authorized_keys
-      chown -R {{ juser }}:{{ juser }} /home/{{ juser }}/.ssh
-
-- name: bsdinstall jails # noqa command-instead-of-shell
-  # You can't pass environemtn variables using the command module
-  shell: bsdinstall jail "{{ jail.root.mountpoint }}/{{ jailname }}"
-  environment:
-    SCRIPT: "{{ jail.root.mountpoint }}/.template/{{ jailname }}"
-    BSDINSTALL_DISTSITE: "{{ jail.mirror | default('http://ftp.freebsd.org/') | trim('/') }}/pub/FreeBSD/releases/{{ ansible_machine }}/{{ ansible_architecture }}/{{ ansible_distribution_release | regex_replace('-p\\d+$', '') }}" # noqa yaml[line-length]
-  args:
-    creates: "{{ jail.root.mountpoint }}/{{ jailname }}/bin"
+- name: include OS specific install instructions
+  include_tasks: "jail-{{ jailcfg.os|default('FreeBSD') }}.yaml"
 
 - name: create directories for mount on host side # noqa risky-file-permissions
   # NB.: The directory ownership and permissions could be anything. It should not be hardcoded at this point
@@ -128,15 +102,6 @@
     state: directory
   loop: "{{ jailcfg.mounts }}"
   when: jailcfg.mounts is defined
-
-- name: setup network when jail is already running
-  community.general.sysrc:
-    # jail: parameter works only, if the jail is running. This way, it's 100% sure, the change happens
-    path: "{{ jail.root.mountpoint }}/{{ jailname }}/etc/rc.conf"
-    name: "ifconfig_{{ item.ifname }}"
-    value: "{{ item.ifconf }}"
-    state: present
-  loop: "{{ jailcfg.inet | jail_net_conf(jailname) }}"
 
 - name: name resolution in jail
   copy:
