--- a/tasks/jail-FreeBSD.yaml
+++ b/tasks/jail-FreeBSD.yaml
@@ -22,6 +22,17 @@
       echo "{{ jail.ssh_key }}" >/home/{{ juser }}/.ssh/authorized_keys
       chown -R {{ juser }}:{{ juser }} /home/{{ juser }}/.ssh
 
+- name: Debug envvars
+  vars:
+    envi:
+      SCRIPT: "{{ jail.root.mountpoint }}/.template/{{ jailname }}"
+      BSDINSTALL_DISTSITE: "{{ jail.mirror | default('http://ftp.freebsd.org/') | trim('/') }}/pub/FreeBSD/releases/{{ ansible_machine }}/{{ ansible_architecture }}/{{ ansible_distribution_release | regex_replace('-p\\d+$', '') }}" # noqa yaml[line-length]
+  debug:
+    var: envi
+  tags:
+    - ondebug
+    - never
+
 - name: bsdinstall jails # noqa command-instead-of-shell
   # You can't pass environemtn variables using the command module
   shell: bsdinstall jail "{{ jail.root.mountpoint }}/{{ jailname }}"
